# zero-trust-k8s-admission-controller

./: .gitignore  Cargo.toml  Dockerfile  README.md
config/: policies.yaml
deploy/: deployment.yaml  mutating-webhook.yaml.tpl  validating-webhook.yaml.tpl
docs/: verification.md
scripts/: setup.sh  test-minikube.sh
src/: lib.rs  main.rs  policy.rs  validator.rs
tests/: validator_test.rs
