[package]
name = "zero-trust-admission-controller"
version = "0.1.0"
edition = "2021"
description = "Zero-Trust Kubernetes Admission Controller - pod security, mTLS injection, policy-as-code"
authors = ["Zero-Trust Team"]
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kubernetes
kube = { version = "0.91", features = ["admission", "client", "runtime"] }
k8s-openapi = { version = "0.22", default-features = false, features = ["v1_28"] }

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# JSON patch for mutating webhook (mTLS injection) - match kube version
json-patch = "1"
tower = "0.5"

[dev-dependencies]
tokio-test = "0.4"
